rnb/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller 
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rootsnbranches
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - rootsnbranches.me
    - www.rootsnbranches.me
    secretName: rnb-ingress-tls
  rules:
  - host: rootsnbranches.me
    host: www.rootsnbranches.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rnb
            port:
              number: 80
